# odfClass

./: .gitignore  ODF_File_Specification.md  README.md  __about__.py  compassCalHeader.py  cruiseHeader.py  dataRecords.py  eventHeader.py  generalCalHeader.py  historyHeader.py  instrumentHeader.py  meteoHeader.py  misc_functions.py  odfHeader.py  odfReader.py  odfSpecification.py  odfUtils.py  parameterClass.py  parameterHeader.py  polynomialCalHeader.py  pyproject.toml  qualityHeader.py  readODF.py  recordHeader.py  requirements.txt  test_odf_class.py
odfClass/: __init__.py
odfClass.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
odf_toolbox/: dataRecords.py
src/odf_toolbox/: CTD_2000037_102_1_DN.ODF  __init__.py  compassCalHeader.py  cruiseHeader.py  eventHeader.py  generalCalHeader.py  historyHeader.py  instrumentHeader.py  metadata_report.py  meteoHeader.py  odfHeader.py  odfUtils.py  parameterHeader.py  polynomialCalHeader.py  qualityHeader.py  recordHeader.py  test_odf_class.py  update_BCD2016913.py
src/odf_toolbox.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test-files/: CTD_95040_8P_1_DN.ODF  CTD_CAR2023011_017_496844_DN.ODF  MADCP_HUD2016027_1999_3469-31_3600.ODF.NEW  MCM_HUD2010014_1771_1039_3600.ODF  MCTD_GRP2019001_2104_11689_1800.ODF  MCTD_HUD2005045_1562_0000_1800.ODF  XBT_HUD2005016_58_1_016.ODF  update_HUD2014030.py
